# linkdrop

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  install.sh
.cursor/skills/linkdrop/: SKILL.md  reference.md
.github/workflows/: release.yml
linkdrop-cli/: Cargo.toml
linkdrop-cli/src/: main.rs
linkdrop-core/: Cargo.toml
linkdrop-core/src/: config.rs  db.rs  error.rs  id.rs  lib.rs  slug.rs  storage.rs  ttl.rs
linkdrop-server/: Cargo.toml
linkdrop-server/src/: flappy.html  main.rs
