[package]
name = "linkdrop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "linkdrop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
linkdrop-core = { path = "../linkdrop-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
