[package]
name = "linkdrop-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
linkdrop-core = { path = "../linkdrop-core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
